# Multithreaded-Task-Execution-Engine

./: .gitignore  CMakeLists.txt  README.md  engine  main.cpp
include/: TaskEngine.hpp
src/examples/: basic_usage.cpp  web_scraper.cpp
tests/: benchmark.cpp  unit_tests.cpp
